--- a/index.html
+++ b/index.html
@@ -7,11 +7,28 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+
 </head>
 
 <body>
     <header class="header">
         <nav class="nav">
+            <input class="btn_menu" id="test" type="checkbox" />
+            <label for="test">
+    <svg class="burger" width="86" height="60" viewbox="0 0 150 150">
+        <g stroke-width="12">   
+            <line x1="6" y1="6" x2="80" y2="6"></line>
+            <line x1="6" y1="28" x2="80" y2="28"></line>
+            <line x1="6" y1="50" x2="80" y2="50"> </line>
+        </g>
+    </svg>
+    <svg class="close" width="86" height="60" viewbox="0 0 150 150">
+        <g stroke-width="12">   
+            <line x1="42" y1="6" x2="42" y2="80"></line>
+            <line x1="6" y1="42" x2="80" y2="42"></line>
+        </g>
+    </svg>
+</label>
             <ul class="menu">
                 <li class="menu_list"><a href="" class="menu_list_item">Главная</a></li>
                 <li class="menu_list"><a href="" class="menu_list_item">Наши проекты</a></li>
@@ -73,7 +90,7 @@
                     <p class="text_project_section_2">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. стандартной "рыбой" для текстов на латинице с начала XVI века. </p>
                     <a href="#" class="btn_about_project"><span>Подробнее о компании</span></a>
                 </div>
-                <img src="./img/section_2.jpg" alt="standarts" width="500" height="400">
+                <img class="img_standarts" src="./img/section_2.jpg" alt="standarts" width="500" height="400">
             </div>
             <div class="projects_skills_2">
                 <div class="project_skil">
